--- a/features/call/impl/src/main/res/values/do_not_translate.xml
+++ b/features/call/impl/src/main/res/values/do_not_translate.xml
@@ -5,5 +5,5 @@
   ~ Please see LICENSE in the repository root for full details.
   -->
 <resources>
-    <string translatable="false" name="element_call">Element Call</string>
+    <string translatable="false" name="element_call">Secure Voice Call</string>
 </resources>
